--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,8 @@
     width: 300px;
     height: 500px;
     background-color: aqua;
+    display: block;
+    margin: 0 auto;
 }
 .licuadora{
     width: 300px;
